# tutor-os

backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: cache.py  config.py  conversation_logger.py  cost_tracker.py  db.py  llm.py  main.py  models.py  prompts.py  registry.py  retrieval.py
backend/app/repo/: __init__.py  base.py  postgres.py  sqlite.py
backend/app/routers/: auth.py  chat.py  glossary.py  mastery.py  questions.py  session.py  topics.py
backend/data/biology/: glossary.json  question_chunks.json  spec_chunks.json  subject_config.json  topics.json
backend/scripts/: create_indexes.py  embed_and_index.py  extract_images.py
data/: question_chunks.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatMessage.tsx  ChatWindow.tsx  FreeMarkPanel.tsx  GlossaryTerm.tsx  LoginScreen.tsx  MarkFeedback.tsx  QuestionPanel.tsx  QuizSummary.tsx  SessionSummaryPanel.tsx  StructuredAnswerForm.tsx  TopicDrawer.tsx  TopicPicker.tsx  TopicSidebar.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useGlossary.ts  useGreeting.ts  useMastery.ts  useQuestion.ts  useSession.ts
frontend/src/types/: index.ts
frontend/src/utils/: parseQuestion.ts
