[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biology-tutor-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pinecone>=5.0",
    "anthropic>=0.40",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "pyjwt>=2.8",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
